Bug 1123966 - Use FILE_FLAG_DELETE_ON_CLOSE instead of RemoveFile. r=aklotz, a=sledru