dom/plugins/ipc/PluginModuleChild.cpp
@@ -84,7 +84,6 @@ typedef HANDLE (WINAPI *CreateFileWPtr)(LPCWSTR fname, DWORD access,
                                         DWORD creation, DWORD flags,
                                         HANDLE ftemplate);
 static CreateFileWPtr sCreateFileWStub = nullptr;
-static WCHAR* sReplacementConfigFile;
 
 // Used with fix for flash fullscreen window loosing focus.
 static bool gDelayFlashFocusReplyUntilEval = false;
@@ -1930,10 +1929,6 @@ PluginModuleChild::DoNP_Initialize(const PluginSettings& aSettings)
 #  error Please implement me for your platform
 #endif
 
-#ifdef XP_WIN
-    CleanupProtectedModeHook();
-#endif
-
     return result;
 }
 
@@ -1968,7 +1963,8 @@ CreateFileHookFn(LPCWSTR fname, DWORD access, DWORD share,
         HANDLE replacement =
             sCreateFileWStub(tempFile, GENERIC_READ | GENERIC_WRITE, share,
                              security, TRUNCATE_EXISTING,
-                             FILE_ATTRIBUTE_TEMPORARY,
+                             FILE_ATTRIBUTE_TEMPORARY |
+                               FILE_FLAG_DELETE_ON_CLOSE,
                              NULL);
         if (replacement == INVALID_HANDLE_VALUE) {
             break;
@@ -1998,7 +1994,6 @@ CreateFileHookFn(LPCWSTR fname, DWORD access, DWORD share,
         WriteFile(replacement, static_cast<const void*>(kSettingString),
                   sizeof(kSettingString) - 1, &wbytes, NULL);
         SetFilePointer(replacement, 0, NULL, FILE_BEGIN);
-        sReplacementConfigFile = _wcsdup(tempFile);
         return replacement;
     }
     return sCreateFileWStub(fname, access, share, security, creation, flags,
@@ -2012,16 +2007,6 @@ PluginModuleChild::HookProtectedMode()
     sKernel32Intercept.AddHook("CreateFileW",
                                reinterpret_cast<intptr_t>(CreateFileHookFn),
                                (void**) &sCreateFileWStub);
-}
-
-void
-PluginModuleChild::CleanupProtectedModeHook()
-{
-    if (sReplacementConfigFile) {
-        DeleteFile(sReplacementConfigFile);
-        free(sReplacementConfigFile);
-        sReplacementConfigFile = nullptr;
-    }
 }
 
 BOOL WINAPI
